Fixed GfyDoubleSlider spacing to get them very close to 1x pixel size. Adjusted height and gradient of background image.

--- a/assets/css/master.styl
+++ b/assets/css/master.styl
@@ -139,14 +139,14 @@ html
   background: linear-gradient(
     top, 
     #00B6C7,
-    50% #87EFD5,
-    60% #E6FBF6,
+    30% #87EFD5,
+    35% #E6FBF6,
     100% #E6FBF6
   ) 
   
 body
   min-height 100% 
-  background-image url("../img/BEACH_AREA_fullview_filled_1920_tall_gradient.png")
+  background-image url("../img/BEACH_AREA_fullview_filled_1920_tall_gradient_TALLER.png")
   background-position center top
   background-repeat no-repeat 
   // background-color #E6FBF6
@@ -484,7 +484,12 @@ input#mce-EMAIL, input#mc-embedded-subscribe
   //   col(1/2)
     
 .responsiveslider
-  col(2/3, offset: 1/6)
+  // col(2/3, offset: 1/6)
+  // col(16/24, offset: 4/24)
+  responsivewidth = .63
+  col(responsivewidth, offset: (1 - responsivewidth)/2)
+  // col(1)
+  // text-align center !important
   display inherit !important
   +below(700px)
     display none !important
@@ -498,14 +503,16 @@ input#mce-EMAIL, input#mc-embedded-subscribe
   // height: 18em
     
 .slide1of2
-  col(1/3, offset: 1/6, gutter: 0)
+  // col(1/3, offset: 1/6, gutter: 0)
+  col(1/2, gutter: 0)
 .slide2of2
-  col(1/3, gutter: 0)
+  // col(1/3, gutter: 0)
+  col(1/2, gutter: 0)
   
 .slidersmallgfy
   // col(28/32, offset: 2/32)
   col(26/32, offset: 3/32)
-  text-align center
+  // text-align center
   display none !important
   +below(700px)
     display inherit !important
@@ -557,7 +564,11 @@ div.gfyitem {
     background-color: rgba(255,255,255,0);
     padding-top: 70%
     padding-bottom: 70%
+    max-width 300px
+    // padding-left auto
+    // padding-right auto  
     +below(700px)
+      max-width 100%
       // padding-top 0 
       // padding-bottom 0
 
